gcc/testsuite/gcc.target/riscv/nds-cpu-option-1.c
/* PR inline-asm/93202 */
/* { dg-do compile } */
/* { dg-options "-march=rv32i -mabi=ilp32 -mcpu=nx25" } */
/* { dg-error "unknown cpu" "" { target *-*-* } 0 } */

void
foo (void)
{
}
